# mkdocs-youtube

./: 404.html  index.html
projeto/: mkdocs.yml  pyproject.toml
projeto/docs/: index.md
projeto/site/search/: search_index.json
