[tool.poetry]
name = "projeto"
version = "0.1.0"
description = ""
authors = ["luhborbs <luhborbafilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.3"
pymdown-extensions = "^10.7"
mkdocs-material = "^9.5.5"
mkdocs-dracula-theme = "^1.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
